--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
-		<script src="js/jquery.min.js"></script>
-		<script src="js/skel.min.js"></script>
-		<script src="js/skel-layers.min.js"></script>
-		<script src="js/init.js"></script>
+		<script src="jquery.min.js"></script>
+		<script src="skel.min.js"></script>
+		<script src="skel-layers.min.js"></script>
+		<script src="init.js"></script>
 		<noscript>
 			<link rel="stylesheet" href="skel.css" />
 			<link rel="stylesheet" href="style.css" />
